/*
 * This file is part of Bisq.
 *
 * Bisq is free software: you can redistribute it and/or modify it
 * under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or (at
 * your option) any later version.
 *
 * Bisq is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public
 * License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with Bisq. If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package security;
option java_package = "bisq.security.protobuf";
option java_multiple_files = true;

message PubKey {
  bytes publicKey = 1;
  string keyId = 2;
}

message ConfidentialData {
  bytes senderPublicKey = 1;
  bytes iv = 2;
  bytes cipherText = 3;
  bytes signature = 4;
}

message EncryptedData {
  bytes iv = 1;
  bytes cipherText = 2;
}

// Protobuf wrapper for java.security.KeyPair used by other modules
message KeyPair {
  bytes privateKey = 1;
  bytes publicKey = 2;
}
message TorKeyPair {
  bytes privateKey = 1;
  bytes publicKey = 2;
  string onionAddress = 3;
}
message I2PKeyPair {
  bytes privateKey = 1;
  bytes publicKey = 2;
  string destination = 3;
}
message KeyBundle {
  string keyId = 1;
  KeyPair keyPair = 2;
  TorKeyPair torKeyPair = 3;
  /*I2PKeyPair i2PKeyPair = 4;*/
}
message KeyBundleStore {
  string secretUid = 1;
  map<string, KeyBundle > keyBundleById = 2;
}

message ProofOfWork {
  bytes payload = 1;
  sint64 counter = 2;
  optional bytes challenge = 3;
  double difficulty = 4;
  bytes solution = 5;
  sint64 duration = 6;
}

message ScryptParameters {
  bytes salt = 1;
  sint32 cost = 2;
  sint32 blockSize = 3;
  sint32 parallelization = 4;
  sint32 keyLength = 5;
}
